Fix footer z-index problem
z-index: -1 let's user to click on links in between footer items even when footer is covered them

--- a/style.css
+++ b/style.css
@@ -150,6 +150,7 @@ section > h2 {
     width: 100%;
     bottom: 0;
     margin-bottom: 2rem;
+    z-index: -1;
 }
 
 .footer > div {
